--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "purescript-maybe": "^1.0.0"
   },
   "devDependencies": {
-    "purescript-test-unit": "^9.0.0"
+    "purescript-test-unit": "^9.0.0",
+    "purescript-quickcheck": "^1.0.0"
   }
 }
