--- a/bower.json
+++ b/bower.json
@@ -11,12 +11,9 @@
     "output"
   ],
   "dependencies": {
-    "purescript-console": "^1.0.0",
-    "purescript-functions": "^1.0.0",
-    "purescript-maybe": "^1.0.0"
+    "purescript-functions": "*",
+    "purescript-maybe": "*"
   },
   "devDependencies": {
-    "purescript-test-unit": "^9.0.0",
-    "purescript-quickcheck": "^1.0.0"
   }
 }
